--- a/src/scss/components/modules/_overlay.scss
+++ b/src/scss/components/modules/_overlay.scss
@@ -5,8 +5,8 @@
 
   position: fixed;
   z-index: 2000;
-  top: 0;
-  bottom: 0;
+  top: -9999px;
+  bottom: -9999px;
   left: 0;
 
   background: #{map-get($lightcase-settings, 'overlay-color')};
